unpackaged/objects/copado__User_Story_Bundle__c.object
<CustomObject>
	<description>DEPRECATED</description>
	<fields>
		<fullName>copado__Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Org Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipName>User_Story_Bundles</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Status_Notes__c</fullName>
		<label>Status Notes</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Open</fullName>
					<default>true</default>
					<label>Open</label>
				</value>
				<value>
					<fullName>Locked</fullName>
				</value>
				<value>
					<fullName>Cancelled</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Title__c</fullName>
		<label>Title</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipName>User_Story_Bundles</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>DEPRECATED</label>
	<nameField>
		<displayFormat>USB-{0000000}</displayFormat>
		<label>User Story Bundle Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>DEPRECATED</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>